--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="initial-scale=1" />
     <title>performance.sync() 2024</title>
     <style type="text/css" media="all">
+      @font-face {
+        font-family: "Metropolis";
+        src:
+          local("Metropolis"),
+          url("assets/fonts/Metropolis-Regular.woff2") format("woff2");
+        font-weight: 400;
+        font-style: normal;
+      }
+
       * {
         box-sizing: border-box;
       }
 
       html {
-        font-family: sans-serif;
+        font-family: "Metropolis", sans-serif;
         font-size: 50px;
         background: linear-gradient(#7b1604, #e25821);
         color: #fff4de;
@@ -69,12 +78,15 @@
       }
 
       li {
-        margin: 0.5rem 0;
+        margin: 0.8rem 0;
         padding: 0;
       }
 
       a {
         color: #ffea7f;
+        text-underline-offset: 0.3rem;
+        text-decoration-thickness: 0.1rem;
+        text-decoration-color: #fea365;
       }
 
       a:hover,
