Add the link to the profiler chrome addon

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
     <ul>
       <li><a href="https://lu.ma/z1qt2a63">Consult this event's agenda</a></li>
       <li>
+        <a
+          href="https://chromewebstore.google.com/detail/firefox-profiler/ljmahpnflmbkgaipnfbpgjipcnahlghn"
+          >Install the Firefox Profiler add-on for Chrome</a
+        >
+      </li>
+      <li>
         <a href="https://profiler.firefox.com/docs/"
           >Learn more about the Firefox Profiler</a
         >
