Adjust line height on the links

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         margin: 2rem 0;
         font-size: 0.9em;
         list-style: inside "👉  ";
+        line-height: 1.8;
       }
 
       li {
