Adjust text to avoid going on 2 lines

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <li>
           <a
             href="https://chromewebstore.google.com/detail/firefox-profiler/ljmahpnflmbkgaipnfbpgjipcnahlghn"
-            >Install the Firefox Profiler add-on for Chrome</a
+            >Install Firefox Profiler add-on for Chrome</a
           >
         </li>
         <li>
