Adjust for perf.now

--- a/index.html
+++ b/index.html
@@ -127,14 +127,11 @@
   <body>
     <h1>
       <span class="title-performance">performance</span
-      ><span class="title-dot">.</span><span class="title-sync">sync()</span>
+      ><span class="title-dot">.</span><span class="title-sync">now()</span>
     </h1>
     <div class="content">
       <p class="font-larger">Thanks for attending!</p>
       <ul>
-        <li>
-          <a href="https://lu.ma/z1qt2a63">Consult this event's agenda</a>
-        </li>
         <li>
           <a
             href="https://chromewebstore.google.com/detail/firefox-profiler/ljmahpnflmbkgaipnfbpgjipcnahlghn"
