More generic styling

--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
   </head>
   <body>
     <h1>
-      <span class="title-performance">performance</span
-      ><span class="title-dot">.</span><span class="title-sync">now()</span>
+      <span class="title-performance">Firefox Profiler</span>
     </h1>
     <div class="content">
       <p class="font-larger">Thanks for attending!</p>
