Adjust the landing page to make it more generic

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         background: black;
       }
 
-      .title-performance {
+      .title-color {
         font-style: italic;
         font-weight: normal;
         color: #cc9eff;
       }
 
-      .title-dot {
+      .title-bold {
         font-weight: bold;
       }
 
@@ -126,10 +126,12 @@
   </head>
   <body>
     <h1>
-      <span class="title-performance">Firefox Profiler</span>
+      <span class="title-bold">Firefox</span>
+      <span class="title-color">♥</span>
+      <span class="title-bold">Performance</span>
     </h1>
     <div class="content">
-      <p class="font-larger">Thanks for attending!</p>
+      <p class="font-larger">Here are a few links for you:</p>
       <ul>
         <li>
           <a
