Update the title to be more generic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1" />
-    <title>performance.sync() 2024</title>
+    <title>Firefox ♥ Performance</title>
     <style type="text/css" media="all">
       @font-face {
         font-family: "Metropolis";
