Add perf.sync and perf.now event schedules

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
       <p class="font-larger">Here are a few links for you:</p>
       <ul>
         <li>
+          <a href="https://lu.ma/ziykhh4y"
+            >View the performance.sync() schedule</a
+          >
+        </li>
+        <li>
+          <a href="https://perfnow.nl/schedule.html"
+            >View the performance.now() schedule</a
+          >
+        </li>
+        <li>
           <a
             href="https://chromewebstore.google.com/detail/firefox-profiler/ljmahpnflmbkgaipnfbpgjipcnahlghn"
             >Install Firefox Profiler add-on for Chrome</a
