--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       html {
         font-family: "Metropolis", sans-serif;
-        font-size: clamp(1rem, 4vw, 3rem);
+        font-size: clamp(1em, 4vw, 2em);
         color: #fff4de;
         min-height: 100%;
         background: #20123a;
@@ -266,7 +266,7 @@
       <ul>
         <li>
           <a href="https://lu.ma/ziykhh4y"
-            >View the performance.sync() schedule</a
+            >View the performance.sync() event page</a
           >
         </li>
         <li>
