Add details for interactive quiz

--- a/index.html
+++ b/index.html
@@ -249,7 +249,10 @@
           </li>
           <li class="schedule-item">
             <span class="schedule-time">21:45</span>
-            <span class="schedule-event schedule-special">Interactive session</span>
+            <span class="schedule-event">
+              Interactive Quiz (with prizes!)
+              <span class="schedule-speaker">Bas Schouten - Mozilla</span>
+            </span>
           </li>
           <li class="schedule-item">
             <span class="schedule-time">22:15</span>
